k8s/Bases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: votosdb
  name: votosdb
  namespace: proyectoso1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votosdb
  template:
    metadata:
      labels:
        app: votosdb
    spec:
      containers:
      - image: estuardosonu/votosdb
        imagePullPolicy: Always
        name: votosdb
        ports:
          - containerPort: 3306
            name: votosdb
        volumeMounts:
          - name: mysql-volumen
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-volumen
          persistentVolumeClaim:
            claimName: votosdb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votosdb
  name: votosdb
  namespace: proyectoso1
spec:
  type: LoadBalancer
  ports:
    - name: votosdb
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: votosdb
