k8s/Client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: votosgrpcc
  name: votosgrpcc
  namespace: proyectoso1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votosgrpcc
  template:
    metadata:
      labels:
        app: votosgrpcc
    spec:
      containers:
      - image: estuardosonu/votosgrpcc
        imagePullPolicy: Always
        name: votosgrpcc
        ports:
          - containerPort: 3001
            name: votosgrpcc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-pub
  name: redis-pub
  namespace: proyectoso1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pub
  template:
    metadata:
      labels:
        app: redis-pub
    spec:
      containers:
      - image: estuardosonu/redis-pub
        imagePullPolicy: Always
        name: redis-pub
        ports:
          - containerPort: 8016
            name: redis-pub
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votosgrpcc
  name: votosgrpcc
  namespace: proyectoso1
spec:
  type: ClusterIP
  ports:
    - name: votosgrpcc
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: votosgrpcc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-pub
  name: redis-pub
  namespace: proyectoso1
spec:
  type: ClusterIP
  ports:
    - name: redis-pub
      port: 8016
      protocol: TCP
      targetPort: 8016
  selector:
    app: redis-pub
